# antakia

./: .coveragerc  .gitattributes  .gitignore  404.html  CHANGELOG.md  CNAME  DESCRIPTION.rst  Dockerfile  LICENSE  M2_MAX_OPTIMIZATION_GUIDE.md  MANIFEST.in  PERFORMANCE_GUIDE.md  PR_DESCRIPTION.md  README.md  README2.md  UI.md  antakia.py  california_housing.ipynb  fonction_auto.py  index.html  mkdocs.yml  mypy.ini  neural_network.ipynb  neural_network2.ipynb  objects.inv  old_pyproject.toml  pyproject.toml  requirements.txt  requirements2.txt  search.html  setup.py  sitemap.xml  test.ipynb
.github/ci/: install-deps.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml  doc.yml  gitlab.yml  publish-skope-rules-antakia.yaml  pylint.yaml  pypi.yaml  pytest.yaml  smoke-pypi.yaml  workflow.yml  yapf.yaml
Ai-Act/: index.html
Theory behind AntakIA/: index.html
Theory_behind_AntakIA/: index.html
Tutorial/: index.html
about/: index.html
advanced/: index.html
ai-vidence.github.io/antakia/: index.html
antakia/: AntakIA.py  Dataset.py  Gui.py  LongTask.py  Potato.py  Xplainer.py  __init__.py  _compute.py  _gui.py  _gui_elements.py  antakia.py  compute.py  config.py  data.py  dataset.py  fonction_auto.py  gui.py  guiFactory.py  gui_elements.py  gui_utils.py  longtask.py  model.py  potato.py  rules.py  selection.py  utils.py
antakia/compute/: auto_cluster.py  compute.py  dim_reduction.py  explanations.py  legacy_auto_cluster.py
antakia/data_handler/: projected_values.py  region.py  rules.py
antakia/explanation/: explanation_method.py  explanations.py
antakia/gui/: __init__.py  colorTable.py  data_store.py  explanation_values.py  gui.py  highdimexplorer.py  progress_bar.py  projected_value_selector.py  region.py  ruleswidget.py  widget_utils.py  widgets.py
antakia/utils/: checks.py  create_save.py  fonction_auto.py  from_rules.py  load_save.py  logging.py  long_task.py  utils.py  variable.py
credits/: index.html
data/: california_housing.csv  german_credit_shap.csv
data/ai_act_demo/: x_test.csv  x_train.csv  y_test.csv
data/california_housing/: cities.csv
dev/: run.py  run_california.py  run_notebook.py  widget_lab.ipynb
docs/: CNAME  UI.md  about.md  clustering.md  credits.md  doc.md  getting-started.md  getting_started.md  index.md  install.md  regional_explain.md  tutorial1.md  tutorial2.md  tutorials.md  usage.md  what_next.md
docs/documentation/: antakia.md  compute.md  dataset.md  gui.md  index.md  longtask.md  potato.md  utils.md  xplainer.md
docs/examples/: california1.md  california2.md  titanic.md  wages.md
docs/workflow/: 02_interactions.ipynb  03_parcellation.ipynb  04_tessellation.ipynb  05_counterfactuals.ipynb  README.md
documentation/: index.html
documentation/antakia/: index.html
documentation/compute/: index.html
documentation/dataset/: index.html
documentation/gui/: index.html
documentation/potato/: index.html
documentation/utils/: index.html
examples/: 01_shap_values_demo.ipynb  Examples.ipynb  SalairesHF.ipynb  ai_act_demo.ipynb  antakia_CH_gui.ipynb  antakia_CH_no_gui.ipynb  antakia_GC_gui.ipynb  antakia_StudPerf.ipynb  antakia_full_auto.ipynb  antakia_gui.ipynb  antakia_no_gui.ipynb  antakia_utils.ipynb  app_graph.ipynb  business.json  california_housing.ipynb  california_housing_compact.ipynb  california_housing_local.ipynb  california_python.py  car_prices.ipynb  climate_change_survey.ipynb  copilot.py  dummy.ipynb  lab.ipynb  layout.ipynb  log_utils.py  mapbox_token  march_madness.ipynb  neural_network.ipynb  neural_network2.ipynb  others.ipynb  out.ipynb  out.py  plotly_lab.ipynb  spash_graph.ipynb  star_dialog.ipynb  test.ipynb  titanic.ipynb  wages.ipynb  wages_optimized.ipynb  widget_lab.ipynb
examples/california1/: index.html
examples/california2/: index.html
examples/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
examples/data/: Student_Performance.csv  business.json  car_prices.csv  german_credit.csv  march_madness.csv  wages.csv
examples/data_save/: my_save.json
examples/titanic/: index.html
examples/wages/: index.html
explain/: index.html
getting-started/: index.html
getting_started/: index.html
install/: index.html
local_runs/: test_antakia.py
regional_explain/: index.html
scripts/: code.sh  gen_ref_pages.py  lint.sh  profile.sh  publish.sh  release.sh  version_sync.py  version_update.sh
search/: search_index.json
site/: index.html  sitemap.xml
test/: test_antakia.py
tests/: antakia_test_case.py  interactions.py  status_checks.py  test_antakia.py  test_progress_bar.py  test_widget_utils.py  utils.py  utils_fct.py
tutorial1/: index.html
tutorial2/: index.html
tutorials/: index.html
usage/: index.html
(+160 files in other folders)
