[tool.poetry]
name = "antakia"
version = "0.2.1"
description = "AI made Xplainable"
readme = "README.md"
authors = [
    "Antoine EDY <antoineedy@outlook.fr>",
    "Pierre HULOT <pierre@ai-vidence.com>",
    "Laurent MICHEL <laurent@ai-vidence.com>",
    "David CORTÉS <david@ai-vidence.com>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = [
    "XAI",
    "explainability",
    "AI",
    "ML",
    "machine learning",
    "artificial intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipyvuetify = "^1.8.10"
ipywidgets = "^8.1.1"
lime = "^0.2.0.1"
plotly = "^5.18.0"
shap = "^0.43.0"
voila = "^0.5.5"
python-dotenv = "^1.0.0"
#antakia-core = {path = "../antakia_core", develop=true}
#antakia-ac = {path = "../antakia_ac", develop=true}
umap-learn = "^0.5.5"
antakia-core = {git = "ssh://git@code.ai-vidence.com:29418/ai-vidence/antakia-core.git"}
antakia-ac = {git = "ssh://git@code.ai-vidence.com:29418/ai-vidence/antakia-ac.git"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ipython = "^8.17.2"
pre-commit = "^3.5.0"
mkdocs = "^1.5.3"
jupyter = "^1.0.0"
jupyterlab = "^4.0.8"
jupyterlab-widgets = "^3.0.9"
mock = "^5.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pydeps = "^1.12.18"
graphviz = "^0.20.1"


[tool.poetry.group.demo.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.8"
jupyterlab-widgets = "^3.0.9"
catboost = "^1.2.2"

[project.urls]
Website = "https://ai-vidence.com/"
Repository = "https://github.com/AI-vidence/antakia"
Documentation = "https://ai-vidence.github.io/antakia/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
