[tool.poetry]
name = "antakia"
version = "0.2.1"
description = "AI made Xplainable"
readme = "README.md"
authors = [
    "Antoine EDY <antoineedy@outlook.fr>",
    "Pierre HULOT <pierre@ai-vidence.com>",
    "Laurent MICHEL <laurent@ai-vidence.com>",
    "David CORTÉS <david@ai-vidence.com>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = [
    "XAI",
    "explainability",
    "AI",
    "ML",
    "machine learning",
    "artificial intelligence",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipyvuetify = "^1.8.10"
ipywidgets = "^8.1.1"
lime = "^0.2.0.1"
numba = "*"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
shap = "^0.43.0"
umap-learn = "^0.5.4"
pandas = ">=1.5.3"
pacmap = "^0.7.1"
pygam = "^0.9.0"
interpret = ">=0.4.4"
voila = "^0.5.5"
tomaster = "^0.0.5"
opentsne = "^1.0.0"
python-dotenv = "^1.0.0"
skope-rules-temp = "^0.1.0"
antakia-core = "*"
antakia-ac = "*"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ipython = "^8.17.2"
pre-commit = "^3.5.0"
mkdocs = "^1.5.3"
jupyter = "^1.0.0"
jupyterlab = "^4.0.8"
jupyterlab-widgets = "^3.0.9"
mock = "^5.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.demo.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.8"
jupyterlab-widgets = "^3.0.9"
catboost = "^1.2.2"

[project.urls]
Website = "https://www.antakia.ai"
Repository = "https://github.com/AI-vidence/antakia"
Documentation = "https://doc.antakia.ai"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
